@@ -1,4 +1,3 @@
-#!perl -T
 use 5.006;
 use strict;
 use warnings;
