@@ -1,6 +1,8 @@
 Revision history for Module-CheckDep-Version
 
 0.02 UNREL
+        - added ignore_any param, default on, if set to false, we'll ignore all
+          prereqs that have a version of 0 set
 
 0.01    2017-06-26
         First version, released on an unsuspecting world.
